...

        var title: String {
            switch self {
            case .explore:
                return "Library"
            case .inProgress:
                return "Continue Coloring"
            case .collections:
                return "Collections"
            case .recentlyAdded:
                return "Recently Added"
            case .collection(let collection):
                return collection.name
...
